<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="638dp"
    android:layout_margin="@dimen/fab_margin"
    android:background="@color/background_forecast"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForecastFragment"
    tools:ignore="TextSizeCheck">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/background_weather"
        tools:context=".WeatherFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/Cloudy" />

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/city_paris" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/Cloudy"
            android:src="@drawable/ic_cloudy_big" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Monday" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/Cloudy"
            android:padding="5dp"
            android:src="@drawable/ic_cloudy" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Cloudy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Tuesday" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Partly_Cloudy"
            android:padding="5dp"
            android:src="@drawable/ic_partly_cloudy" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Partly_Cloudy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Wednesday" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Rainy"
            android:padding="5dp"
            android:src="@drawable/ic_rainy" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Rainy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Thursday" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Thunderstorm"
            android:padding="5dp"
            android:src="@drawable/ic_thunderstorm" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Thunderstorm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Friday" />

        <ImageView
            android:id="@+id/img6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Sunny"
            android:padding="5dp"
            android:src="@drawable/ic_sunny" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Sunny" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Saturday" />

        <ImageView
            android:id="@+id/img7"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Windy_Cloudy"
            android:padding="5dp"
            android:src="@drawable/ic_windy_cloudy" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Windy_Cloudy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Sunday" />


        <ImageView
            android:id="@+id/img8"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Snowy"
            android:padding="5dp"
            android:src="@drawable/ic_snowy" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Snowy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Monday" />

        <ImageView
            android:id="@+id/img9"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Cloudy"
            android:padding="5dp"
            android:src="@drawable/ic_cloudy" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Cloudy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Tuesday" />

        <ImageView
            android:id="@+id/img10"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_blank_fragment"
            android:padding="5dp"
            android:src="@drawable/ic_cloudy" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Cloudy" />
    </LinearLayout>


</LinearLayout>